@@ -1273,6 +1273,9 @@ do_curl_setopt(CurlObject *self, PyObject *args)
 #ifdef HAVE_CURL_7_19_4_OPTS
         case CURLOPT_SOCKS5_GSSAPI_SERVICE:
 #endif
+#ifdef HAVE_CURL_7_19_6_OPTS
+        case CURLOPT_SSH_KNOWNHOSTS:
+#endif
 /* FIXME: check if more of these options allow binary data */
             str = PyText_AsString_NoNUL(obj, &encoded_obj);
             if (str == NULL)
