@@ -118,3 +118,11 @@ class OptionConstantsTest(unittest.TestCase):
         curl = pycurl.Curl()
         curl.setopt(curl.PROXYTYPE, curl.PROXYTYPE_HTTP_1_0)
         curl.close()
+    
+    # CURLOPT_SSH_KNOWNHOSTS was introduced in libcurl-7.19.6
+    @util.min_libcurl(7, 19, 6)
+    @util.guard_unknown_libcurl_option
+    def test_ssh_knownhosts_setopt(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.SSH_KNOWNHOSTS, '/hello/world')
+        curl.close()
